# poetry2

./: .coverage  pyproject.toml
.github/workflows/: Coverage.yml  pytest.yml
project_poetry/: Duplicate_zeros.py
tests/: test_duplicate.py
