[tool.poetry]
name = "project-poetry"
version = "0.1.0"
description = ""
authors = ["Gabriele <gabriele.maggioni.cologno@gmail.com>"]
readme = "README.md"
packages = [{include = "project_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
